argocd/manifests/actual-budget/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actual-budget
  labels:
    app.kubernetes.io/name: actual-budget
    app.kubernetes.io/managed-by: argocd
