argocd/manifests/actual-budget/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
  namespace: actual-budget
  labels:
    app: actual-budget
    app.kubernetes.io/name: actual-budget
spec:
  type: ClusterIP
  selector:
    app: actual-budget
  ports:
    - name: http
      port: 5006
      targetPort: 5006
      protocol: TCP
